# go-gate

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  TRADEMARKS.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
core/: __init__.py  go_gate.py  go_gate_schema.sql  skills_executor.py  tool_registry.py
docs/: api_reference.md
docs/assets/: README.md
go_gate/: __init__.py
go_gate/core/: __init__.py  agent_monitor.py  go_gate.py  skills_executor.py
scripts/: generate_architecture.py
skills/: __init__.py  file_operations.py
tests/: test_basic.py
