[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "go-gate"
version = "0.1.0"
description = "Database-Grade Safety for AI Agents"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "William Park", email = "william@go-gate.io"}
]
maintainers = [
    {name = "William Park", email = "william@go-gate.io"}
]
keywords = [
    "ai",
    "agent",
    "security",
    "sandbox",
    "two-phase-commit",
    "2pc",
    "safety",
    "autonomous",
    "llm",
    "policy"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.8.0",
    "google-genai>=0.3.0",
    "requests>=2.28.0",
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
vector = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
]
all = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
]

[project.urls]
Homepage = "https://github.com/billyxp74/go-gate"
Documentation = "https://github.com/billyxp74/go-gate#readme"
Repository = "https://github.com/billyxp74/go-gate.git"
Issues = "https://github.com/billyxp74/go-gate/issues"
Changelog = "https://github.com/billyxp74/go-gate/blob/main/CHANGELOG.md"

[project.scripts]
go-gate = "go_gate.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["go_gate*", "core*", "skills*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "security: marks tests as security-critical tests",
]

[tool.coverage.run]
source = ["core", "skills"]
omit = ["*/tests/*", "*/venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
